AngularJS frontend added
New routes added:
1.userdata/
2.questions/
3.questions/:id
4.init/
5.profile
QuestionList, Question, User Controllers defined for Angular

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "spons",
-  "description": "A sponsorship management portal for IIT Patna",
+  "description": "Webapp for quizzes",
   "version": "0.0.0",
   "homepage": "",
   "license": "GNU GPL-2.0",
